; ModuleID = '/home/carl/AnghaBench/libgit2/tests/rebase/extr_abort.c_test_rebase_abort__merge_by_revspec.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/rebase/extr_abort.c_test_rebase_abort__merge_by_revspec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"b146bd7\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"efad0b1\00", align 1
@GIT_REPOSITORY_STATE_REBASE_MERGE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_rebase_abort__merge_by_revspec() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = load i32, i32* @repo, align 4
  %5 = call i32 @git_annotated_commit_from_revspec(i32** %2, i32 %4, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32, i32* @repo, align 4
  %8 = call i32 @git_annotated_commit_from_revspec(i32** %3, i32 %7, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32, i32* @repo, align 4
  %11 = load i32*, i32** %2, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @git_rebase_init(i32** %1, i32 %10, i32* %11, i32* null, i32* %12, i32* null)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32, i32* @GIT_REPOSITORY_STATE_REBASE_MERGE, align 4
  %16 = load i32, i32* @repo, align 4
  %17 = call i32 @git_repository_state(i32 %16)
  %18 = call i32 @cl_assert_equal_i(i32 %15, i32 %17)
  %19 = load i32*, i32** %2, align 8
  %20 = load i32*, i32** %3, align 8
  %21 = call i32 @test_abort(i32* %19, i32* %20)
  %22 = load i32*, i32** %2, align 8
  %23 = call i32 @git_annotated_commit_free(i32* %22)
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @git_annotated_commit_free(i32* %24)
  %26 = load i32*, i32** %1, align 8
  %27 = call i32 @git_rebase_free(i32* %26)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_annotated_commit_from_revspec(i32**, i32, i8*) #1

declare dso_local i32 @git_rebase_init(i32**, i32, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_repository_state(i32) #1

declare dso_local i32 @test_abort(i32*, i32*) #1

declare dso_local i32 @git_annotated_commit_free(i32*) #1

declare dso_local i32 @git_rebase_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
